@@ -1,5 +1,10 @@
 2007-12-11  Mathias Hasselmann  <mathias@openismus.com>
 
+	* gtkdoc-depscan.in:
+	  Also scan devhelp folders.
+
+2007-12-11  Mathias Hasselmann  <mathias@openismus.com>
+
 	* gtkdoc-depscan.in: 
 	  Print reasonable error message when passing
 	  non-existant files on command line.
